bg change bubbles

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="cen">
                 <div class="balance">
                     <h1 id="balance"></h1>
-                    <h4>current Balance</h4>
+                    <h4>Current Balance</h4>
                 </div>
             </div>
 
@@ -117,12 +117,12 @@
 
             <hr>
             <div class="transcation">
-                <h2 class="transaction-title">Add new Transaction</h2>
+                <h2 class="transaction-title">Add new transaction</h2>
 
                 <form action="#" class="transection-form" id="form">
 
                     <input type="text" id="text" class="inp-text" placeholder="Enter text here">
-                    <input type="number" id="amount" class="inp-number" placeholder="Enter number here">
+                    <input type="number" id="amount" class="inp-number" placeholder="Enter amount">
                     <button class="button-27" role="button">Add Transection</button>
 
                 </form>
